--- a/templates/inventory/history.html
+++ b/templates/inventory/history.html
@@ -66,7 +66,7 @@
                             </h5>
                             <h6 class="card-subtitle mb-2 text-muted">
                                 {% if h.created %}
-                                Created by <strong>{{ h.user }}</strong>{% else %}Changed by <strong>{{ h.user }}</strong>  {% endif %}
+                                Created by <strong>{{ h.user }}</strong>{% else %}Changed by <strong>{{ h.user }}</strong>  {% endif %}{% if h.created_by_syncing or h.updated_by_syncing %}<span class="badge bg-primary">in syncing mode 🔄</span>{% endif %}
                                 <br>
                                 <small>At: {{ h.changed_at|date:'Y-m-d H:i' }}</small>
                             </h6>{% if not h.created %}
