--- a/templates/inventory/history.html
+++ b/templates/inventory/history.html
@@ -57,6 +57,7 @@
         <div class="row g-3">
             {% for h in history %}
                 <div class="col-12 col-md-6">
+                    {{ forloop.revcounter  }}
                     <div class="card shadow-sm h-100">
                         <div class="card-body">
                             <h5 class="card-title">
