--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -138,7 +138,7 @@ altFormat: 'F j, Y'
 <br><br>
 {% if rjobs %}
 {% for job in rjobs %}
-
+{% if job.affected_by_sync %}<span class="badge bg-warning">Synced.</span>{% endif %}
 <div id="{{ job.job_id }}" class="card mb-4 shadow-sm">
 <div class="card-body job-card">
 <div  class="row">
