--- a/templates/inventory/admin_panel.html
+++ b/templates/inventory/admin_panel.html
@@ -158,7 +158,7 @@
                 {% for eng in engineers %}
                   <tr>
                     <td>
-                      <strong>{{ eng.name }}</strong>
+                      <strong>{{ eng }}</strong>
                     </td>
                     <td class="text-center">
                       <a href="#" class="btn btn-sm btn-outline-dark">Edit ✏</a>
