--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_tags %}
 
-{% block title %}Inventory - Stocky{% endblock %}
+{% block title %}Stocky{% endblock %}
 {% block body %}
 {% if messages %}
 {% for message in messages %}
