--- a/templates/inventory/update_user.html
+++ b/templates/inventory/update_user.html
@@ -1,6 +1,7 @@
 {% extends 'inventory/base.html' %}
 {% load static %}
 {% load custom_tags %}
+{% block title %}Update User{% endblock title %}
 {% block body %}
   {% if messages %}
     {% for message in messages %}
