--- a/templates/inventory/scheduler.html
+++ b/templates/inventory/scheduler.html
@@ -33,7 +33,7 @@
       <div class="card my-3 shadow-sm border-0">
         <!-- Card Header -->
         <div class="card-header text-white fw-bold d-flex justify-content-between align-items-center" style="background-color: #404960ff;">
-          <span>Group {{ forloop.counter }} — {{ group.jobs.all|length }} job{{ group.jobs.all|length|pluralize }}</span>
+          <span> {{group.id}} Group {{ forloop.counter }} — {{ group.jobs.all|length }} job{{ group.jobs.all|length|pluralize }}</span>
 
           {% if group.optimized_at %}
             <span style="
@@ -65,12 +65,13 @@
                   <input type="hidden" name="group_id" value="{{ group.id }}" />
                   <button type="submit" name="move_down" value="{{ job.id }}">🔻</button>
                   <button type="submit" name="move_up" value="{{ job.id }}">🔼</button>
+                  <input type="hidden" name="old_group" value="{{ group.id }}" />
 
-                  {% comment %} <select name="move_to_group" id="" onchange="this.form.submit()" class="form-select form-select-sm w-auto">
+                  <select name="move_to_group" value="{{ job.id }}" onchange="this.form.submit()" class="form-select form-select-sm w-auto">
                     {% for group_options in groups %}
-                      <option value="{{ group_options.id }}">Group {{ forloop.parentloop.parentloop.counter }}</option>
+                      <option name="new_group" value="{{ group_options.id }}" {% if group_options.id == group.id%}selected{% endif %}>{{ group_options.id }}Group {{ forloop.counter }}</option>
                     {% endfor %}
-                  </select> {% endcomment %}
+                  </select>
                 </form>
               </div>
             </li>
